# fullstack-workshop

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
static/: index.html
