[package]
name = "fullstack-workshop"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "api/lib",
    "api/shuttle",
    "shared"
]
resolver = "2"


[dependencies]
async-trait = "0.1.81"
serde_json = "1.0.121"
sqlx = { version = "0.7", features = ["tls-native-tls", "macros", "postgres", "uuid", "chrono", "json"] }
tracing = "0.1.40"
