[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
], optional = true }
uuid = { version = "1.10.0", features = ["js", "serde", "v4"] }

[features]
backend = ["sqlx"]

